blub/beep.txt

> blub@0.0.0 start /home/jclemme/Projects/blub/blub
> node ./bin/www

/home/jclemme/Projects/blub/blub/queue_client.js:112
                function(machine));
                                 ^

SyntaxError: Unexpected token ')'
    at wrapSafe (internal/modules/cjs/loader.js:1072:16)
    at Module._compile (internal/modules/cjs/loader.js:1122:27)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
    at Module.load (internal/modules/cjs/loader.js:1002:32)
    at Function.Module._load (internal/modules/cjs/loader.js:901:14)
    at Module.require (internal/modules/cjs/loader.js:1044:19)
    at require (internal/modules/cjs/helpers.js:77:18)
    at Object.<anonymous> (/home/jclemme/Projects/blub/blub/app.js:14:19)
    at Module._compile (internal/modules/cjs/loader.js:1158:30)
    at Object.Module._extensions..js (internal/modules/cjs/loader.js:1178:10)
npm ERR! code ELIFECYCLE
npm ERR! errno 1
npm ERR! blub@0.0.0 start: `node ./bin/www`
npm ERR! Exit status 1
npm ERR! 
npm ERR! Failed at the blub@0.0.0 start script.
npm ERR! This is probably not a problem with npm. There is likely additional logging output above.

npm ERR! A complete log of this run can be found in:
npm ERR!     /home/jclemme/.npm/_logs/2020-03-16T01_59_18_730Z-debug.log
